Update chat bot project.ipynb

--- a/chat bot project.ipynb
+++ b/chat bot project.ipynb
@@ -15,7 +15,7 @@
         "import getpass\n",
         "import os\n",
         "\n",
-        "os.environ[\"GOOGLE_API_KEY\"] = getpass.getpass(\"AIzaSyDeBcUapIe3550RbvRR5hh3SqmtiX57jts\")"
+        "os.environ[\"GOOGLE_API_KEY\"] = getpass.getpass(\"YOUR API KEY")"
       ]
     },
     {
